@@ -7,6 +7,7 @@
   * Added default override of page level waits - Druid.default_page_wait
   * Added default override of element level waits - Druid.default_element_wait
   * Added the ability to find a TableRow by providing a String to the [] method
+  * Added the ability to find a TableCell by providing a String to the [] method from TableRow
 === 2016-12-26
 * Enhancement
   * Changed page_url to accept a symbol that will cause it to call a corresponding method
